fixed spacing issue with footer

--- a/team_collab_client/src/App.css
+++ b/team_collab_client/src/App.css
@@ -179,7 +179,7 @@
 
 }
 .wrapper {
-  min-height: calc(100vh - 265px);
+  min-height: calc(100vh - 264px);
   padding: 10px;
   padding-bottom:60px;
 }
